# mono-tools

./: configure.in
gendarme/rules/: Makefile.am  common.make
gendarme/rules/Gendarme.Rules.BadPractice/: Makefile.am
gendarme/rules/Gendarme.Rules.Correctness/: Makefile.am
gendarme/rules/Gendarme.Rules.Design/: Makefile.am
gendarme/rules/Unity.Rules.Maintainability/: Makefile.am
gendarme/rules/Unity.Rules.Performance/: AvoidWritingToTheDatabaseOutsideOfSceneChangesRule.cs  Makefile.am
gendarme/rules/Unity.Rules.Performance/Test/: AvoidWritingToTheDatabaseOutsideOfSceneChangesTest.cs
