include ../common.make

rules_sources =  \
	AvoidEmptyComponentsMethodsRule.cs \
	AvoidUsingFindObjectInUpdateRule.cs \
	CacheComponentLookupRule.cs \
	UseBuiltInArraysRule.cs \
  Utilities.cs

EXTRA_TESTS_OPTIONS += -r:WindowsBase

tests_sources = \
	AvoidEmptyComponentsMethodsRule.cs \
	AvoidUsingFindObjectInUpdateRule.cs \
	CacheComponentLookupRule.cs \
	UseBuiltInArraysRule.cs \
  Utilities.cs
