include ../common.make

rules_sources =  \
	AvoidEmptyComponentsMethodsRule.cs \
	AvoidUsingFindObjectInUpdateRule.cs \
	CacheComponentLookupRule.cs \
	UseBuiltInArraysRule.cs \
	AvoidWritingToTheDatabaseOutsideOfSceneChangesRule.cs \
  Utilities.cs

EXTRA_TESTS_OPTIONS += -r:WindowsBase

tests_sources = \
	AvoidEmptyComponentsMethodsTest.cs \
	AvoidUsingFindObjectInUpdateTest.cs \
	CacheComponentLookupTest.cs \
	UseBuiltInArraysTest.cs \
	AvoidWritingToTheDatabaseOutsideOfSceneChangesTest.cs
